manifest.yaml
---
# test Namespace rules
apiVersion: v1
kind: Namespace
metadata:
  # name: reliably
  name: namespace

---
# test Pod rules
apiVersion: v1
kind: Pod
metadata:
  name: chaostoolkit
  labels:
    app: chaostoolkit
spec:
  restartPolicy: Never
  containers:
  - name: chaostoolkit
    image: chaostoolkit:latest
  - name: anothercontainer
    image: untaggedimage

---
# test Ingress rules
apiVersion: apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

---
# Another Ingress with same name as in other manifest
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
